finished lab4/ex2

--- a/c/lab4/ex2/src/Makefile
+++ b/c/lab4/ex2/src/Makefile
@@ -1,6 +1,6 @@
 CC = g++
 CXXFLAGS = -I../include -g
-SRCS = account.cpp main.cpp
+SRCS = account.cpp client.cpp main.cpp
 OBJS = $(SRCS:.cpp=.o)
 EXEC = ../bin
 
